finish users collection
