# middleware/validation.js
@@ -24,6 +24,32 @@ const saveItem = async (req, res, next) => {
         }
     }).catch( err => console.log(err))
 }
+
+
+const saveUser = async (req, res, next) => {
+    const validationRule = {
+        "name": "required|string",
+        "gender": "required|in:Male,Female",
+        "email": "required|email",
+        "birthday": "required|string",
+        "role": "required|in:admin,user,guest",
+        "isMember": "required|in:true,false"
+    };
+
+    await validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(412)
+                .send({
+                    success: false,
+                    message: 'Validation failed',
+                    data: err
+                });
+        } else {
+            next();
+        }
+    }).catch( err => console.log(err))
+}
+
 module.exports = {
-   saveItem
+   saveItem, saveUser
 };
