# routes/index.js
@@ -9,7 +9,7 @@ router.get('/', (req,res) => {
 });
 
 router.use('/items', require('./items'));
-//router.use('/users', require('./users'));
+router.use('/users', require('./users'));
 
 
 module.exports = router;
